--- a/HomePage.html
+++ b/HomePage.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 <div class="container">
-<div class="product">
-    <div class="table"></div>
-    <div class="menu"></div>
-    <div class="search"></div>
-</div>
-<div class="bill"></div>
+    <div class="header_home"></div>
+    <div class="body_home">
+        <div class="content_menu"></div>
+        <div class="content_bill"></div>
+    </div>
+    <div class="footer_home"></div>
 </div>
 </body>
 </html>
