--- a/LoginPage.html
+++ b/LoginPage.html
@@ -12,7 +12,7 @@
     <form class="form1">
         <input class="un " type="text" align="center" placeholder="Tên người dùng"/>
         <input class="pass" type="password" align="center" placeholder="Mật khẩu"/>
-        <a class="submit" align="center" >Sign in </a>
+        <a class="submit" align="center"  href="HomePage.html">Sign in </a>
         <a class="forgot" align="center" >Forgot <i class = "fas fa-key"></i> </a>
         <a class="signup" align="center" >Sign up  </a>
         <p class="hotline" align="center" >Hotline 0927007791<a href="#"></a> </p>
