--- a/HomePage.html
+++ b/HomePage.html
@@ -3,12 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/HomePage.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <title>Sign in</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+          integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <title>HOME</title>
 </head>
 <body>
-<div class="container">
-    <div class="header_home"></div>
+<div class="containerHome">
+
+    <div class="header_home">
+        <div class="posisionbtn">
+            <button type="button" class="btn btn-primary active">Phòng Bàn</button>
+            <button type="button" class="btn btn-primary active">Thực Đơn</button>
+            &nbsp
+            <form class="form-inline d-flex justify-content-center md-form form-sm active-purple-2 mt-2">
+                <input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Tìm kiếm"
+                       aria-label="Search">
+                <i class="fas fa-search" aria-hidden="true"></i>
+            </form>
+            &emsp;&emsp;&emsp;&emsp;
+            <button type="button" class="btn btn-primary active">Hóa đơn 1</button>
+            &nbsp&nbsp
+            <button type="button" class="btn btn-primary btn-circle"><i class="fas fa-plus"></i></button>
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+            <button type="button" class="btn btn-primary btn-circle"><i class="fa fa-volume-up"></i></button>
+            &nbsp
+            <button type="button" class="btn btn-primary btn-circle"><i class="fas fa-globe"></i></button>
+            &nbsp
+            <button type="button" class="btn btn-primary btn-circle" style="color: #FFFFFF"><i
+                    class="fas fa-sync-alt"></i></button>
+            &nbsp
+            <button type="button" class="btn btn-primary btn-circle"><i class="fa fa-print"></i></button>
+            &nbsp&nbsp&nbsp
+            <button type="button" class="btn btn-primary btn-circle-lg"><i class="fas fa-user fa-lg"></i></button>
+            &nbsp&nbsp&nbsp
+            <button type="button" class="btn btn-primary btn-circle-lg"><i class="glyphicon glyphicon-list fa-lg"></i>
+            </button>
+
+        </div>
+    </div>
     <div class="body_home">
         <div class="content_menu"></div>
         <div class="content_bill"></div>
